data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1521.wast
;; 2. **Branch Out of Loop:**    - Test Condition: Implement an `if` instruction within a loop with a `br_if` that attempts to exit the loop under a constant false condition.    - Constraint: The `br_if` should not exit the loop, validating branches and stack management.    - Relevance: Assesses handling infinite loops when `br_if` fails to exit as intended.

(assert_invalid
  (module
    (func (loop  ;; loop block
      (if (i32.const 0)  ;; condition always false
        (then (br_if 1))  ;; attempt to break the loop
        (else (nop))  ;; no operation
      )
    ))
  )
  "type mismatch"
)